add server-side generated pug pages
