# 26thJuly/controllers/calculatorController.js
@@ -16,11 +16,19 @@ const addNumbers = (req, res) => {
         return
     }
 
-
-    res.status(200).json({
-        status: "SUCCESS",
-        result: Calculator.add(num_1, num_2)
-    })
+    try {
+        const result = Calculator.add(num_1, num_2)
+        res.status(200).json({
+            status: "SUCCESS",
+            result
+        })
+    } catch (e) {
+        console.error(e)
+        res.status(500).json({
+            status: "FAILED",
+            error: e
+        })
+    }
 }
 
 const subtractNumbers = (req, res) => {
@@ -38,11 +46,19 @@ const subtractNumbers = (req, res) => {
         return
     }
 
-
-    res.status(200).json({
-        status: "SUCCESS",
-        result: Calculator.subtract(num_1, num_2)
-    })
+    try {
+        const result = Calculator.subtract(num_1, num_2)
+        res.status(200).json({
+            status: "SUCCESS",
+            result
+        })
+    } catch (e) {
+        console.error(e)
+        res.status(500).json({
+            status: "FAILED",
+            error: e
+        })
+    }
 }
 
 const multiplyNumbers = (req, res) => {
@@ -60,11 +76,19 @@ const multiplyNumbers = (req, res) => {
         return
     }
 
-
-    res.status(200).json({
-        status: "SUCCESS",
-        result: Calculator.multiply(num_1, num_2)
-    })
+    try {
+        const result = Calculator.multiply(num_1, num_2)
+        res.status(200).json({
+            status: "SUCCESS",
+            result
+        })
+    } catch (e) {
+        console.error(e)
+        res.status(500).json({
+            status: "FAILED",
+            error: e
+        })
+    }
 }
 
 const divideNumbers = (req, res) => {
@@ -82,11 +106,29 @@ const divideNumbers = (req, res) => {
         return
     }
 
+    if (num_1 == 0) {
+        res.status(400).json({status: "FAILED", message: "Cannot divide by 0. num_1 is 0."})
+        return
+    }
 
-    res.status(200).json({
-        status: "SUCCESS",
-        result: Calculator.divide(num_1, num_2)
-    })
+    if (num_2 == 0) {
+        res.status(400).json({status: "FAILED", message: "Cannot divide by 0. num_2 is 0."})
+        return
+    }
+
+    try {
+        const result = Calculator.divide(num_1, num_2)
+        res.status(200).json({
+            status: "SUCCESS",
+            result
+        })
+    } catch (e) {
+        console.error(e)
+        res.status(500).json({
+            status: "FAILED",
+            error: e
+        })
+    }
 }
 
 const exponentializeNumbers = (req, res) => {
@@ -108,10 +150,71 @@ const exponentializeNumbers = (req, res) => {
         })
     }
 
-    res.status(200).json({
-        status: "SUCCESS",
-        result: Calculator.exponentialize(num1, num2)
-    })
+    try {
+        const result = Calculator.exponentialize(num1, num2)
+        res.status(200).json({
+            status: "SUCCESS",
+            result
+        })
+    } catch (e) {
+        console.error(e)
+        res.status(500).json({
+            status: "FAILED",
+            error: e
+        })
+    }
+}
+
+const modulusNumbers = (req, res) => {
+    let {num_1, num_2} = req.query;
+
+    num_1 = parseInt(num_1), num_2 = parseInt(num_2)
+
+    if (isNaN(num_1)) {
+        res.status(400).json({
+            status: "FAILED",
+            message: "num_1 is not an int"
+        })
+        return
+    }
+
+    if (isNaN(num_2)) {
+        res.status(400).json({
+            status: "FAILED",
+            message: "num_2 is not an int"
+        })
+        return
+    }
+
+    try {
+        const result = Calculator.modulus(num_1, num_2)
+        res.status(200).json({
+            status: "SUCCESS",
+            result
+        })
+    } catch (e) {
+        console.error(e)
+        res.status(500).json({
+            status: "FAILED",
+            error: e
+        })
+    }
+}
+
+const previousResults = (req, res) => {
+    try {
+        res.status(200).json(Calculator.getPreviousResults())
+    } catch (e) {
+        console.error(e)
+        res.status(500).json({
+            status: "FAILED",
+            error: e
+        })
+    }
+}
+
+const returnPreviousResults = () => {
+    return Calculator.getPreviousResults();
 }
 
 module.exports = {
@@ -119,5 +222,8 @@ module.exports = {
     subtractNumbers,
     multiplyNumbers,
     divideNumbers,
-    exponentializeNumbers
+    exponentializeNumbers,
+    modulusNumbers,
+    previousResults,
+    returnPreviousResults
 }
