# 26thJuly/routes/calculatorV2Route.js
@@ -1,10 +1,14 @@
 var express = require('express')
 var router = express.Router()
 
-var { exponentializeNumbers } = require('../controllers/calculatorController')
+var { exponentializeNumbers, previousResults } = require('../controllers/calculatorController')
 
 router.get('/exponentation', (req, res) => {
     exponentializeNumbers(req, res)
+})
+
+router.get('/previousResults', (req, res) => {
+    previousResults(req, res);
 })
 
 module.exports = router
