# 26thJuly/swagger.json
@@ -14,7 +14,7 @@
     "tags": [
         {
             "name": "Calculator",
-            "description": "API for Calculus in the system"
+            "description": "Calculator API to do many functions of a real-life calculator."
         }
     ],
     "schemes": ["http"],
@@ -24,7 +24,7 @@
         "/calculator/add": {
             "get": {
                 "tags": [
-                    "Addition Service"
+                    "Calculator"
                 ],
                 "summary": "Adds 2 numbers",
                 "parameters": [
@@ -52,7 +52,7 @@
         "/calculator/subtract": {
             "get": {
                 "tags": [
-                    "Subtraction Service"
+                    "Calculator"
                 ],
                 "summary": "Subtracts 2 numbers",
                 "parameters": [
@@ -80,7 +80,7 @@
         "/calculator/multiply": {
             "get": {
                 "tags": [
-                    "Multiplication Service"
+                    "Calculator"
                 ],
                 "summary": "Multiplies 2 numbers together",
                 "parameters": [
@@ -108,7 +108,7 @@
         "/calculator/divide": {
             "get": {
                 "tags": [
-                    "Division Service"
+                    "Calculator"
                 ],
                 "summary": "Divides 2 numbers together",
                 "parameters": [
@@ -128,7 +128,7 @@
                         "description": "This service allows you to divide a number by a second number"
                     },
                     "400": {
-                        "description": "Either num_1 or num_2 is not a number. Check what inputs you are supplying to the API and try again."
+                        "description": "Either num_1 or num_2 is not a number or num_1 or num_2 is 0. Check what inputs you are supplying to the API and try again."
                     }
                 }
             }
@@ -136,7 +136,7 @@
         "/calculatorV2/exponentation": {
             "get": {
                 "tags": [
-                    "Exponentation Service"
+                    "Calculator"
                 ],
                 "summary": "Raises a number to the power of another number",
                 "parameters": [
@@ -157,6 +157,22 @@
                     },
                     "400": {
                         "description": "Either num1 or num2 is not a number. Check what inputs you are supplying to the API and try again."
+                    }
+                }
+            }
+        },
+        "/calculatorV2/previousResults": {
+            "get": {
+                "tags": [
+                    "Calculator"
+                ],
+                "summary": "Get the previous results you have received from this calculator service.",
+                "responses": {
+                    "200": {
+                        "description": "The server has processed your request and has supplied you with your previous results."
+                    },
+                    "500": {
+                        "description": "Internal server error. Check result.error for more details."
                     }
                 }
             }
